// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot displays with search button 1`] = `
<DocumentFragment>
  <form
    class="aje-input is-medium"
  >
    <label
      class="aje-label"
      for="SearchInput-8262918470288328"
    >
      search
    </label>
    <input
      id="SearchInput-8262918470288328"
      role="search"
      type="search"
      value=""
    />
    <button
      aria-label="submit search"
      type="submit"
    >
      <i
        class="material-icons is-medium"
      >
        search
      </i>
    </button>
  </form>
</DocumentFragment>
`;

exports[`matches snapshot displays without button 1`] = `
<DocumentFragment>
  <form
    class="aje-input is-medium"
  >
    <label
      class="aje-label"
      for="SearchInput-8262918470288328"
    >
      search
    </label>
    <input
      id="SearchInput-8262918470288328"
      role="search"
      type="search"
      value=""
    />
  </form>
</DocumentFragment>
`;
